--- a/examples/TwoInputFilterExample/AndroidManifest.xml
+++ b/examples/TwoInputFilterExample/AndroidManifest.xml
@@ -7,6 +7,10 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
+    
+    <uses-permission android:name="android.permission.CAMERA" />
+ 	<uses-feature android:name="android.hardware.camera" />
+ 	<uses-feature android:name="android.hardware.camera.autofocus" />
 
     <application
         android:allowBackup="true"
